fwknop-2.6.11 (12/09/2019):
    - [server] (Amin Massad) Fixed two bugs in PF handling code - one for
      indefinitely repeating error messages "Did not find expire comment in
      rules list 0" in rule deletion code, and the second where min_exp was
      not computed correctly for min_exp equal to zero. See github issue #295.
    - [server] Add ALLOW_ANY_USER_AGENT for ENABLE_SPA_OVER_HTTP mode so that
      fwknopd will accept any User-Agent string coming from the client. By
      default this is disabled, so only SPA packets with a User-Agent string
      that begins with 'Fwknop' will be accepted. Just set this variable to
      'Y' to override this. Then, on the fwknop client command line, use the
      --user-agent option to specify any desired User-Agent string. This
      feature was added to close issue #296 reported by github user
      @fishcreek.
    - [AppArmor] (Francois Marier) Various fixes to the AppArmor profile to
      support recent versions of Debian and Ubuntu.
    - [test suite] Add gpg.conf and gpg-agent.conf to set 'pinentry-mode
      loopback' to restore GPG full cycle tests. This works with GPG 2.2.27 on
      Ubuntu 22.04 for example.
    - [test suite] Prefer the 'ip' command over the older 'ifconfig' command
      for interface operations and loopback detection.

fwknop-2.6.10 (08/06/2018):
    - [server] Add MAX_FW_TIMEOUT to access.conf stanzas to allow a maximum
      number of seconds for client-specified timeouts in SPA packets. This
      fixes issue #226 which was spotted by Jeremiah Rothschild.
    - [server] Bug fix in CMD_EXEC mode to make sure to call exit() upon any
      error from execvpe(). Without this fix, additional fwknopd processes
      would be started upon a user specifying a command without the necessary
      permissions. This bug was reported by Stephen Isard.
    - [build] Jérémie Courrèges-Anglas and Ingo Feinerer contributed a patch
      to fix endian detection on OpenBSD systems based on information